--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1,7 +1,7 @@
 _lang_: "日本語"
 
 headlineMisskey: "ノートでつながるネットワーク"
-introMisskey: "ようこそ！Misskeyは、オープンソースの分散型マイクロブログサービスです。\n「ノート」を作成して、いま起こっていることを共有したり、あなたについて皆に発信しよう📡\n「リアクション」機能で、皆のノートに素早く反応を追加することもできます👍\n新しい世界を探検しよう🚀"
+introMisskey: "ようこそ！Nextは、オープンソースの分散型マイクロブログサービスです。\n「ノート」を作成して、いま起こっていることを共有したり、あなたについて皆に発信しよう📡\n「リアクション」機能で、皆のノートに素早く反応を追加することもできます👍\n新しい世界を探検しよう🚀"
 monthAndDay: "{month}月 {day}日"
 search: "検索"
 notifications: "通知"
@@ -378,7 +378,7 @@ exploreFediverse: "Fediverseを探索"
 popularTags: "人気のタグ"
 userList: "リスト"
 about: "情報"
-aboutMisskey: "Misskeyについて"
+aboutMisskey: "Nextについて"
 administrator: "管理者"
 token: "トークン"
 twoStepAuthentication: "二段階認証"
@@ -524,7 +524,7 @@ sort: "ソート"
 ascendingOrder: "昇順"
 descendingOrder: "降順"
 scratchpad: "スクラッチパッド"
-scratchpadDescription: "スクラッチパッドは、AiScriptの実験環境を提供します。Misskeyと対話するコードの記述、実行、結果の確認ができます。"
+scratchpadDescription: "スクラッチパッドは、AiScriptの実験環境を提供します。Nextと対話するコードの記述、実行、結果の確認ができます。"
 output: "出力"
 script: "スクリプト"
 disablePagesScript: "Pagesのスクリプトを無効にする"
@@ -650,7 +650,7 @@ createNewClip: "新しいクリップを作成"
 unclip: "クリップ解除"
 confirmToUnclipAlreadyClippedNote: "このノートはすでにクリップ「{name}」に含まれています。ノートをこのクリップから除外しますか？"
 public: "パブリック"
-i18nInfo: "Misskeyは有志によって様々な言語に翻訳されています。{link}で翻訳に協力できます。"
+i18nInfo: "Next(Misskey)は有志によって様々な言語に翻訳されています。{link}で翻訳に協力できます。"
 manageAccessTokens: "アクセストークンの管理"
 accountInfo: "アカウント情報"
 notesCount: "ノートの数"
@@ -792,7 +792,7 @@ hashtags: "ハッシュタグ"
 troubleshooting: "トラブルシューティング"
 useBlurEffect: "UIにぼかし効果を使用"
 learnMore: "詳しく"
-misskeyUpdated: "Misskeyが更新されました！"
+misskeyUpdated: "Nextが更新されました！"
 whatIsNew: "更新情報を見る"
 translate: "翻訳"
 translatedFrom: "{x}から翻訳"
@@ -1208,7 +1208,7 @@ _time:
   day: "日"
 
 _tutorial:
-  title: "Misskeyの使い方"
+  title: "Nextの使い方"
   step1_1: "ようこそ。"
   step1_2: "この画面は「タイムライン」と呼ばれ、あなたや、あなたが「フォロー」する人の「ノート」が時系列で表示されます。"
   step1_3: "あなたはまだ何もノートを投稿しておらず、誰もフォローしていないので、タイムラインには何も表示されていないはずです。"
@@ -1217,7 +1217,7 @@ _tutorial:
   step3_1: "プロフィール設定はうまくできましたか？"
   step3_2: "では試しに、何かノートを投稿してみてください。画面上にある鉛筆マークのボタンを押すとフォームが開きます。"
   step3_3: "内容を書いたら、フォーム右上のボタンを押すと投稿できます。"
-  step3_4: "内容が思いつかない？「Misskey始めました」というのはいかがでしょう。"
+  step3_4: "内容が思いつかない？「Next始めました」というのはいかがでしょう。"
   step4_1: "投稿できましたか？"
   step4_2: "あなたのノートがタイムラインに表示されていれば成功です。"
   step5_1: "次は、他の人をフォローしてタイムラインを賑やかにしたいところです。"
@@ -1227,9 +1227,9 @@ _tutorial:
   step6_1: "タイムラインに他のユーザーのノートが表示されていれば成功です。"
   step6_2: "他の人のノートには、「リアクション」を付けることができ、簡単にあなたの反応を伝えられます。"
   step6_3: "リアクションを付けるには、ノートの「+」マークをクリックして、好きなリアクションを選択します。"
-  step7_1: "これで、Misskeyの基本的な使い方の説明は終わりました。お疲れ様でした。"
-  step7_2: "もっとMisskeyについて知りたいときは、{help}を見てみてください。"
-  step7_3: "では、Misskeyをお楽しみください🚀"
+  step7_1: "これで、Nextの基本的な使い方の説明は終わりました。お疲れ様でした。"
+  step7_2: "もっとNextについて知りたいときは、{help}を見てみてください。"
+  step7_3: "では、Nextをお楽しみください🚀"
 
 _2fa:
   alreadyRegistered: "既に設定は完了しています。"
